--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box;    
+    background-color: rgba(0, 0, 0, 0.67);
 }
 
 header{
@@ -50,7 +51,40 @@ header{
     animation-timing-function: ease;
     animation-iteration-count: infinite;
 }
-
+.galeri {
+    padding-left: 70px;
+    padding-right: 70px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 300px; 
+    overflow: hidden;
+  }
+  
+  .galeri img {
+    width: 18%; 
+    height: 100%;
+    float: left;
+    transition: transform 0.5s ease;
+  }
+  .galeri img:hover {
+    transform: translateX(-10%); 
+  }
+  body h2{
+    color: white;
+    padding-left: 35%;
+    padding-top: 10%;
+  }
+   h5{
+    color: white;
+    padding-left: 35%;
+    padding-top: 2%;
+  }
+  h4{
+    color: white;
+    padding-left: 75%;
+    padding-top: 0%;
+  }
 @keyframes nav-hover {
     0%{
         border-bottom: 1px solid white;
