--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;    
-    background-color: rgba(0, 0, 0, 0.67);
+    box-sizing: border-box;
+    background-color: black;
+}
+
+a{
+    color: black;
+    text-decoration: none;
 }
 
 header{
@@ -51,40 +56,7 @@ header{
     animation-timing-function: ease;
     animation-iteration-count: infinite;
 }
-.galeri {
-    padding-left: 70px;
-    padding-right: 70px;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 300px; 
-    overflow: hidden;
-  }
-  
-  .galeri img {
-    width: 18%; 
-    height: 100%;
-    float: left;
-    transition: transform 0.5s ease;
-  }
-  .galeri img:hover {
-    transform: translateX(-10%); 
-  }
-  body h2{
-    color: white;
-    padding-left: 35%;
-    padding-top: 10%;
-  }
-   h5{
-    color: white;
-    padding-left: 35%;
-    padding-top: 2%;
-  }
-  h4{
-    color: white;
-    padding-left: 75%;
-    padding-top: 0%;
-  }
+
 @keyframes nav-hover {
     0%{
         border-bottom: 1px solid white;
@@ -124,4 +96,74 @@ header{
     height: calc(100vh - 120px);
     object-fit: cover;
     z-index: -1;
+}
+
+.galeria {
+    padding-top: 50px;
+    padding-left: 80px;
+    padding-right: 80px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    overflow: hidden;
+}
+  
+.galeria img {
+    width: 400px; 
+    height: auto;
+    transition: transform 0.5s ease;
+}
+.galeria img:hover {
+    transform: translateX(-25px); 
+}
+
+.galeria-text-section{
+    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.galeria-text{
+    position: absolute;
+    right: 0;
+    width: 60%;
+    padding: 30px 0px;
+}
+
+hr{
+    width: 100%;
+}
+
+.below-hr-galeria{
+    display: flex;
+    justify-content: flex-start;
+    padding-bottom: 20px;
+    font-size: 2rem;
+    color: white;
+}
+
+.under-hr-galeria{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 20px;
+    font-size: 1.5rem;
+    color: white;
+}
+
+.services-link{
+    padding: 5px;
+    color: white;
+    text-decoration: none;
+    border: 1px solid black;
+    border-bottom: 1px solid white;
+}
+
+.services-link:hover{
+    text-decoration: none;
+    border-radius: 8px;
+    animation-name: nav-hover;
+    animation-duration: 1s;
+    animation-timing-function: ease;
+    animation-iteration-count: infinite;
 }
