--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: LondrinaOutline;
+    src: url(fonts/LondrinaOutline-Regular.ttf);
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -93,11 +98,17 @@ header{
     }
 }
 
-#hero-background{
-    width: 100%;
-    height: calc(100vh - 120px);
-    object-fit: contain;
-    z-index: 1;
+.title{
+    padding-top: 20px;
+}
+
+.title h1{
+    color: white;
+    font-family: LondrinaOutline, sans-serif;
+    font-size: 100px;
+    text-align: center;
+    letter-spacing: 15px;
+    opacity: 30%;
 }
 
 .galeria {
