--- a/rrethmeje.css
+++ b/rrethmeje.css
@@ -1,7 +1,7 @@
 
 .aboutSection{
 	width: 100%;
-	padding: 75px 8% 60px;
+	padding: 100px 365px 60px 340px;
 	background-color: var(--bg-clr-one);
 }
 .aboutContents .aboutImage{
