--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
     background-color: black;
 }
 
+.title , .hero-slideshow-container{
+    padding: 0 150px 0 150px;
+}
 
 
 a{
@@ -141,7 +144,7 @@ header{
     position: absolute;
     right: 0;
     width: 60%;
-    padding: 30px 0px;
+    margin: 100px 0px;
 }
 
 hr{
@@ -186,7 +189,6 @@ hr{
     top: -35px;
     display: flex;
     transition: 0.5s ease-in-out;
-    padding: 0 150px 0 150px;
     justify-content: space-between;
 }
   
@@ -195,6 +197,88 @@ hr{
     height: 500px;
 }
 
-#prevBtn, #nextBtn {
-    color: #fff;
+.slideshow-buttons{
+    display: flex;
+    justify-content: center;
+    gap: 20%;
+    align-items: center;
 }
+  
+#prevBtn {
+    width: 1.5vw;
+    height: 1.5vw;
+    transform: translate(-50%, -50%);
+    transform: rotate(90deg);
+    cursor: pointer;
+}
+  
+#prevBtn span {
+    display: block;
+    width: 1.5vw;
+    height: 1.5vw;
+    border-bottom: 5px solid white;
+    border-right: 5px solid white;
+    transform: rotate(45deg);
+    animation: animateLeft 2s infinite;
+}
+  
+#prevBtn span:nth-child(2) {
+    animation-delay: -0.2s;
+}
+  
+#prevBtn span:nth-child(3) {
+    animation-delay: -0.4s;
+}
+  
+@keyframes animateLeft {
+    0% {
+        opacity: 0;
+        transform: rotate(45deg) translate(-20px, -20px);
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        transform: rotate(45deg) translate(20px, 20px);
+    }
+}
+
+#nextBtn {
+    width: 1.5vw;
+    height: 1.5vw;
+    transform: translate(-50%, -50%);
+    transform: rotate(-90deg);
+    cursor: pointer;
+}
+  
+#nextBtn span {
+    display: block;
+    width: 1.5vw;
+    height: 1.5vw;
+    border-bottom: 5px solid white;
+    border-right: 5px solid white;
+    animation: animateRight 2s infinite;
+}
+  
+  #nextBtn span:nth-child(2) {
+    animation-delay: -0.2s;
+  }
+  
+  #nextBtn span:nth-child(3) {
+    animation-delay: -0.4s;
+  }
+  
+  @keyframes animateRight {
+    0% {
+      opacity: 0;
+      transform: rotate(45deg) translate(-20px, -20px);
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+      transform: rotate(45deg) translate(20px, 20px);
+    }
+  }
