css edits on gallery and rrethmeje

--- a/gallery.css
+++ b/gallery.css
@@ -136,7 +136,8 @@
 .portfolioContents .portfolioGallery .card{
 	position: relative;
 	width: 80%;
-	height: 80%;
+	height: auto;
+	border-radius: 10px;
 	cursor: pointer;
 	overflow: hidden;
 }
