--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     background-color: black;
 }
 
-.title , .hero-slideshow-container{
+.title{
     padding: 0 150px 0 150px;
 }
 
@@ -184,101 +184,36 @@ hr{
     animation-iteration-count: infinite;
 }
 
+.hero-slideshow-container{
+    width: 100%;
+    padding: 0 100px 0 100px;
+    position: relative;
+    top: -30px;
+}
+
 .slideshow-wrapper {
     position: relative;
-    top: -35px;
+    width: 100%;
+    overflow: hidden;
+  }
+  
+  .slides-container {
     display: flex;
-    transition: 0.5s ease-in-out;
-    justify-content: space-between;
-}
+    transition: transform 0.5s ease-in-out;
+  }
   
-.slideshow-wrapper img {
-    width: 350px;
-    height: 500px;
-}
+  .slide {
+    flex: 0 0 400px; /* Set the fixed width for each slide */
+    margin-right: 10px; /* Add spacing between slides */
+  }
+  
+  .slideshow-wrapper img {
+    width: 100%;
+    height: 550px;
+    object-fit: cover;
+  }
 
-.slideshow-buttons{
-    display: flex;
-    justify-content: center;
-    gap: 20%;
-    align-items: center;
-}
-  
-#prevBtn {
-    width: 1.5vw;
-    height: 1.5vw;
-    transform: translate(-50%, -50%);
-    transform: rotate(90deg);
-    cursor: pointer;
-}
-  
-#prevBtn span {
-    display: block;
-    width: 1.5vw;
-    height: 1.5vw;
-    border-bottom: 5px solid white;
-    border-right: 5px solid white;
-    transform: rotate(45deg);
-    animation: animateLeft 2s infinite;
-}
-  
-#prevBtn span:nth-child(2) {
-    animation-delay: -0.2s;
-}
-  
-#prevBtn span:nth-child(3) {
-    animation-delay: -0.4s;
-}
-  
-@keyframes animateLeft {
-    0% {
-        opacity: 0;
-        transform: rotate(45deg) translate(-20px, -20px);
-    }
-    50% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-        transform: rotate(45deg) translate(20px, 20px);
-    }
-}
-
-#nextBtn {
-    width: 1.5vw;
-    height: 1.5vw;
-    transform: translate(-50%, -50%);
-    transform: rotate(-90deg);
-    cursor: pointer;
-}
-  
-#nextBtn span {
-    display: block;
-    width: 1.5vw;
-    height: 1.5vw;
-    border-bottom: 5px solid white;
-    border-right: 5px solid white;
-    animation: animateRight 2s infinite;
-}
-  
-  #nextBtn span:nth-child(2) {
-    animation-delay: -0.2s;
+  .transition-disabled {
+    transition: none !important;
   }
   
-  #nextBtn span:nth-child(3) {
-    animation-delay: -0.4s;
-  }
-  
-  @keyframes animateRight {
-    0% {
-      opacity: 0;
-      transform: rotate(45deg) translate(-20px, -20px);
-    }
-    50% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-      transform: rotate(45deg) translate(20px, 20px);
-    }
-  }
