--- a/gallery.css
+++ b/gallery.css
@@ -39,3 +39,43 @@
 	cursor: pointer;
 	border-radius: 10px;
   }
+
+/* Styles for the modal */
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.9);
+  }
+  
+  .modal-content {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+  }
+  
+  .modal-gallery {
+	max-width: 100%;
+	max-height: 100%;
+  }
+  
+  .modal-image {
+	max-width: 100%;
+	max-height: 100%;
+  }
+  
+  .close {
+	color: #fff;
+	position: absolute;
+	top: 10px;
+	right: 25px;
+	font-size: 35px;
+	font-weight: bold;
+	cursor: pointer;
+  }
