--- a/style.css
+++ b/style.css
@@ -282,3 +282,15 @@ a{
 .icons-footer a{
     color: white;
 }
+
+#canvas-container {
+    width: 100%;
+    height: 1000px;
+    margin: 0 auto;
+  }
+
+  #map-container {
+    width: 60%;
+    height: 1000px;
+    margin: 0 auto;
+  }
